fix(Controls): 增强 HighlightBlock 内容可读性 & ToggleSwitch 的禁用淡出具有缓冲

--- a/src/Huskui.Avalonia/Controls/HighlightBlock.axaml
+++ b/src/Huskui.Avalonia/Controls/HighlightBlock.axaml
@@ -22,6 +22,7 @@
         <Setter Property="Foreground" Value="{StaticResource ControlSecondaryForegroundBrush}" />
         <Setter Property="Padding" Value="6,0" />
         <Setter Property="FontSize" Value="{StaticResource SmallFontSize}" />
+        <Setter Property="FontWeight" Value="{StaticResource ControlStrongFontWeight}" />
         <Setter Property="CornerRadius" Value="{StaticResource SmallCornerRadius}" />
         <Setter Property="Template">
             <ControlTemplate>
