--- a/src/Huskui.Avalonia/Controls/StepItem.axaml
+++ b/src/Huskui.Avalonia/Controls/StepItem.axaml
@@ -1,4 +1,9 @@
 ﻿<ResourceDictionary xmlns="https://github.com/avaloniaui"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <!-- Add Resources Here -->
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:husk="https://github.com/d3ara1n/Huskui.Avalonia">
+    <ControlTheme x:Key="{x:Type husk:StepItem}" TargetType="husk:StepItem">
+        <Setter Property="Template">
+            <ControlTemplate />
+        </Setter>
+    </ControlTheme>
 </ResourceDictionary>
